--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.gz filter=lfs diff=lfs merge=lfs
-*.gzip filter=lfs diff=lfs merge=lfs
-*.zip filter=lfs diff=lfs merge=lfs
+*.gz filter=lfs diff=lfs merge=lfs -text
+*.gzip filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
